<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassForEvery</string>
    <string name="hello">Welcome to Class for Every!</string>
    <string name="welcome">欢迎使用教室互动及时反馈系统！</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="account">账 号</string>
    <string name="send_code">获取验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="confirm">确 定</string>
    <string name="submit">提交</string>
    
    <string name="hint_login_account">手机号/邮箱</string>
    <string name="hint_login_password">6~16个字符,区分大小写</string>
    <string name="hint_login_remember_password">记住密码</string>
    <string name="hint_login_change_password"><u>忘记密码？</u></string>
    
    <string name="hint_register_account">昵称：班级 + 学号 + 姓名</string>
    <string name="hint_register_password">密码：6-16位字符</string>
    <string name="hint_register_password_confirm">密码确认：和上面密码相同</string>
    <string name="hint_register_email">邮箱</string>
    <string name="hint_register_phone">手机号</string>
    
    <string name="account_empty">账号为空，请重新输入！</string>
    <string name="account_wrong">账号格式错误，请重新输入！</string>
	<string name="password_empty">密码为空，请重新输入！</string>
	<string name="password_length_wrong">密码长度不符合规范，请重新输入！</string>
	<string name="password_equal_wrong">密码和确认密码不相同，请重新输入！</string>
	<string name="email_empty">邮箱为空，请重新输入！</string>
	<string name="email_wrong">邮箱格式错误，请重新输入！</string>
	<string name="phone_empty">手机号为空，请重新输入！</string>
	<string name="phone_length_wrong">手机号错误，请重新输入！</string>
	
	<string name="message_reveice">验证码已发放到手机，请查收短信！</string>
	<string name="email_reveice">验证码已发放到邮箱，请查收邮件！</string>
	<string name="code_wrong">验证码错误请重新输入或获取！</string>
	<string name="account_not_exist">账号不存在，请注册！</string>
	
	<string name="login_failure">登录失败！</string>
	
</resources>
