<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ededed"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff">

        <TextView
            android:id="@+id/forget_password_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:drawableStart="@drawable/previous"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/forget_password_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:drawableEnd="@drawable/next"
            android:textSize="30sp"
            android:textColor="#FF0000"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/account"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/forget_password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/textView1"
            android:hint="@string/hint_login_account"
            android:textSize="15sp" />

    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="7"
            android:hint="@string/input_code"
            android:textSize="20sp" />

        <Button
            android:id="@+id/send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/send_code"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
