<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2" >
    

      
    <TextView
		android:id="@+id/userAccount"
		android:hint="@string/hint_login_account"
		android:textColorHint="#FFFFFF"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:textColor="#FFFFFF"
		android:drawableLeft="@drawable/account_person"
		android:drawablePadding="10dp"
		android:textSize="25sp"
		android:layout_margin="20dp"/>
        

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
<EditText
	android:id="@+id/modify_password_once"
    android:hint="@string/hint_register_password"
    android:textColorHint="#FFFFFF"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:inputType="textPassword"
	android:textColor="#FFFFFF"
	android:drawableStart="@drawable/password_lock"
	android:drawablePadding="10dp" />
<ToggleButton
    android:id="@+id/modifyTogglePwd"
    android:background="@drawable/password_selector"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_alignParentRight="true"
    android:layout_margin="10dp"
    android:textOff=""
    android:textOn="" />
</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

<EditText
	android:id="@+id/modify_password_second"
    android:hint="@string/hint_register_password_confirm"
    android:textColorHint="#FFFFFF"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:inputType="textPassword"
	android:textColor="#FFFFFF"
	android:drawableStart="@drawable/password_lock"
	android:drawablePadding="10dp" />
<ToggleButton
    android:id="@+id/modifyConfirmTogglePwd"
    android:background="@drawable/password_selector"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_alignParentRight="true"
    android:layout_margin="10dp"
    android:textOff=""
    android:textOn="" />
</RelativeLayout>

<Button
    android:id="@+id/modifyConfirmButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submit" />
<Button
    android:id="@+id/modifyBackButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/back" />
        
</LinearLayout>
